--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "wa-client",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.17.7",
-    "axios": "^1.6.5",
-    "clsx": "^2.0.0",
-    "js-cookie": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.0",
-    "react-select": "^5.8.0"
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.5",
-    "vite": "^4.4.5"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "vite.config.js",
-  "author": "Mamniash",
-  "license": "ISC"
+	"name": "workout-app-client",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^5.17.7",
+		"axios": "^1.6.5",
+		"clsx": "^2.0.0",
+		"js-cookie": "^3.0.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.49.2",
+		"react-icons": "^4.12.0",
+		"react-router-dom": "^6.21.0",
+		"react-select": "^5.8.0"
+	},
+	"devDependencies": {
+		"@types/js-cookie": "^3.0.6",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@vitejs/plugin-react": "^4.0.3",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"prettier": "^3.1.1",
+		"sass": "^1.69.5",
+		"vite": "^4.4.5"
+	},
+	"description": "react, vite, eslint",
+	"main": "vite.config.js",
+	"author": "Mamniash",
+	"license": "ISC"
 }
